@startuml
' Paketstruktur

package "com.example.spelltrainer.gui" {
    class SpellTrainerGUI {
        - DATA_FILE : String = "spelltrainer.json"
        - PERSISTENCE_TYPE : String = "JSON"
        - spellTrainer : SpellTrainer
        - dao : SpellTrainerDAO
        + SpellTrainerGUI()
        + start() : void
        + main(args : String[]) : void
    }
}

package "com.example.spelltrainer.model" {
    class SpellTrainer {
        - wordImagePairs : List<WordImagePair> [0..*] "privat"
        - currentPair : WordImagePair [0..1] "privat"
        - totalAttempts : int "privat"
        - correctAttempts : int "privat"
        - incorrectAttempts : int "privat"
        + SpellTrainer(wordImagePairs : List<WordImagePair>)
        + selectRandomPair() : void
        + guessWord(guess : String) : boolean
        + getTotalAttempts() : int
        + getCorrectAttempts() : int
        + getIncorrectAttempts() : int
    }

    class WordImagePair {
        - word : String "privat"
        - imageUrl : URL "privat"
        + WordImagePair(word : String, imageUrl : String)
        + getWord() : String
        + getImageUrl() : URL
    }
}

package "com.example.spelltrainer.persistence" {
    interface SpellTrainerDAO {
        + save(spellTrainer : SpellTrainer) : void
        + load() : SpellTrainer
    }

    class JSONSpellTrainerDAO {
        - filename : String "privat"
        + JSONSpellTrainerDAO(filename : String)
        + save(spellTrainer : SpellTrainer) : void
        + load() : SpellTrainer
    }

    class SpellTrainerDAOFactory {
        + getSpellTrainerDAO(type : String, filename : String) : SpellTrainerDAO
    }
}

' Beziehungen

' Instanzpfeil: SpellTrainerGUI enthält eine Instanz von SpellTrainer
SpellTrainerGUI --> SpellTrainer : dao : "1..1" "privat"

' Instanzpfeil: SpellTrainerGUI nutzt SpellTrainerDAOFactory, um DAO zu erstellen
SpellTrainerGUI --> SpellTrainerDAOFactory : "PERSISTENCE_TYPE, DATA_FILE" "1..1" "privat"

' Implementierungspfeil: JSONSpellTrainerDAO implementiert SpellTrainerDAO
JSONSpellTrainerDAO ..|> SpellTrainerDAO : implements

' Instanzpfeil: SpellTrainerDAOFactory erstellt SpellTrainerDAO
SpellTrainerDAOFactory --> SpellTrainerDAO : "1..1" "public"

' Assoziationspfeil (Komposition): SpellTrainer enthält 1 oder kein aktuelles WordImagePair
SpellTrainer *-- WordImagePair : currentPair : "0..1" "privat" wordImagePairs : "0..*" "privat"

@enduml
